--- a/styles.html
+++ b/styles.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Hesed - Style Guide</title>
+    <title>True Vine - Style Guide</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
